syntax = "proto3";

package rpc.framework;

import "rpc/base.proto";

option java_package = "com.github.paopaoyue.mesh.rpc.proto";
option java_outer_classname = "Framework";

message PingRequest {
  string message = 1;

  base.ReqBase base = 255;
}

message PingResponse {
  string message = 1;

  base.RespBase base = 255;
}
